# service-kit

./: .env.example  Cargo.toml  README.md
src/: config.rs  error.rs  http.rs  http_middleware.rs  lib.rs  model.rs  nats.rs  shutdown.rs  ssh.rs
src/config/: mod.rs
src/http/: server.rs
src/logger/: mod.rs
