[package]
name = "service-kit"
version = "0.1.0"
edition = "2021"
description = "Provides a set of tools and helpers for building backend services in Rust."
keywords = ["backend", "service"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ukasyah-dev/service-kit"

[features]
http = ["axum"]

[dependencies]
axum = { version = "0.8.1", optional = true }
dotenvy = "0.15.7"
env_logger = "0.11.6"
envconfig = "0.11.0"
log = "0.4.22"
signal-hook = "0.3.17"
tokio = "1.43.0"
tokio-util = "0.7.13"
